@@ -35,6 +35,52 @@
         <%= select_tag :eligibility, options_for_select(Evaluation::ELIGIBILITY, params[:eligibility]) %>
       </div>
     </div>
+
+    <div class="span4 control-group">
+      <%= label :receipt_after, 'Receipt Date After', class: 'control-label' %>
+      <div class="controls">
+        <%= text_field_tag :receipt_after, params[:receipt_after], class: 'datepicker' %>
+      </div>
+    </div>
+
+    <div class="span4 control-group">
+      <%= label :receipt_before, 'Receipt Date Before', class: 'control-label' %>
+      <div class="controls">
+        <%= text_field_tag :receipt_before, params[:receipt_before], class: 'datepicker' %>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="span4 control-group">
+      <%= label :administration_type, 'Administration Type', class: 'control-label' %>
+      <div class="controls">
+        <%= select_tag :administration_type, options_for_select([['---', nil]] + Choice.where(category: 'administration type').collect{|c| [c.name, c.id]}, params[:administration_type]) %>
+      </div>
+    </div>
+
+    <div class="span4 control-group">
+      <%= label :scored_after, 'Scored Date After', class: 'control-label' %>
+      <div class="controls">
+        <%= text_field_tag :scored_after, params[:scored_after], class: 'datepicker' %>
+      </div>
+    </div>
+
+    <div class="span4 control-group">
+      <%= label :scored_before, 'Scored Date Before', class: 'control-label' %>
+      <div class="controls">
+        <%= text_field_tag :scored_before, params[:scored_before], class: 'datepicker' %>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="span4 control-group">
+      <%= label :evaluation_type, 'Evaluation Type', class: 'control-label' %>
+      <div class="controls">
+        <%= select_tag :evaluation_type, options_for_select([['---', nil]] + Choice.where(category: 'evaluation type').collect{|c| [c.name, c.id]}, params[:evaluation_type]) %>
+      </div>
+    </div>
   </div>
 
   <div class="form-actions">
